--- a/main.tex
+++ b/main.tex
@@ -31,6 +31,7 @@
 \author[Shengqiang Zhang]{Shengqiang Zhang}
 \institute[LMU Munich]{
     % \large
+    {\includegraphics[scale=0.037, trim=0 200 0 0, clip]{images/cis-logo.pdf}}
     {\includegraphics[scale=0.032]{images/LMU_Muenchen_Logo.svg.png}} \\
     Center for Information \& Language Processing (CIS), LMU Munich 
 }
