Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -27,7 +27,7 @@
 % \usecolortheme[named=LMUGreen]{structure}
 
 \begin{document}
-\title[Place]{Title}
+\title[CIS PhD Seminar]{Title}
 \author[Shengqiang Zhang]{Shengqiang Zhang}
 \institute[LMU Munich]{
     % \large
